--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npm i && npx playwright install && node index.js"
+    "start": "node index.js",
+    "setup": "npm i && npx playwright install"
   },
   "author": "",
   "license": "ISC",
